fixed some errors

--- a/problem-1-sneakers-analysis.ipynb
+++ b/problem-1-sneakers-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b5f7191",
+   "id": "ba7af3d6",
    "metadata": {},
    "source": [
     "# Shopify Data Science Intern Challenge - Satrajit Chatterjee\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2cba3bb",
+   "id": "cbb26d24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "78006355",
+   "id": "f7b8df2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aff9c2c",
+   "id": "9d973891",
    "metadata": {},
    "source": [
     "## Step 1: Analyzing the Structure of the Provided Data\n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "193ded73",
+   "id": "e3be595d",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4036cfc8",
+   "id": "f23eaa79",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "64bd5dd2",
+   "id": "e13bfaf1",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "851b37aa",
+   "id": "c1e9019a",
    "metadata": {},
    "source": [
     "The data description confirms the fact that AOV is 3145.13. We can also note that the 75% percentile is at 390 but the max order amount is 704000. This means that there are obvious outliers that are causing the overall mean to be inflated. Similarly, there are orders where the total number of items are at 2000, which is much higher than the 75% percentile of 3 items. Visualizing this data gives us a better sense of the outlying entries in the dataset. "
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9bb980",
+   "id": "d8ed9794",
    "metadata": {},
    "source": [
     "## Step 2: Visualizing Outliers"
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "63e41ea3",
+   "id": "09efbc85",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4e63583b",
+   "id": "260f0f0e",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d7ab73",
+   "id": "a191d227",
    "metadata": {},
    "source": [
     "The box plots for `order_amount` confirm that there are outliers, where the graph has a much smaller range with `showfliers` set to `False`. Calculating the highest and lowest 5% percentiles, we can filter down the data to a much more reasonable range, in this case, between 122 and 640. "
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "153aea94",
+   "id": "7f416df8",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8720496f",
+   "id": "b9f5f557",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8340dc24",
+   "id": "2ff8ddd9",
    "metadata": {},
    "source": [
     "The box plots for `total_items` confirm that there are outliers, where the graph has a much smaller range with `showfliers` set to `False`. Calculating the highest and lowest 5% percentiles, we can filter down the data to a much more reasonable range, in this case, between 1 and 4. "
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc21a608",
+   "id": "b04d408d",
    "metadata": {},
    "source": [
     "## Step 3: Tracking a New Dependent Variable - IOV\n",
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "140aa652",
+   "id": "f442d074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "10b90367",
+   "id": "e4136b03",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9c9821db",
+   "id": "f9335426",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b74f5fb",
+   "id": "2d439221",
    "metadata": {},
    "source": [
     "The middle 90% quantile of IOV ranges bewteen 112 and 195. This contributes to the factors when creating a reliable data filter. "
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5afe32b8",
+   "id": "fbf07bb0",
    "metadata": {},
    "source": [
     "## Step 4: Data Filtering\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ebc5f1ed",
+   "id": "51aee0e3",
    "metadata": {
     "scrolled": true
    },
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a69d9318",
+   "id": "cd20695d",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "43fac712",
+   "id": "9be7c46b",
    "metadata": {
     "scrolled": true
    },
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "78902968",
+   "id": "ea7f606e",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7411bd19",
+   "id": "8f307b4b",
    "metadata": {},
    "source": [
     "The current filtering process can be used to categorize the data into two main sections, the first one representing 0.34% of the orders, for large businesses, and the second one representing 85.42% of the orders, for regular businesses. "
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d807d4e3",
+   "id": "f88d7ccf",
    "metadata": {},
    "source": [
     "## Step 5: Conclusive Data\n",
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7373f072",
+   "id": "9c58e8a8",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "618f9091",
+   "id": "e4864c0a",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "42f80f49",
+   "id": "a90854f7",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6f5d7fa2",
+   "id": "927a2590",
    "metadata": {},
    "outputs": [
     {
@@ -702,21 +702,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a143e173",
+   "id": "550cf4fd",
    "metadata": {},
    "source": [
-    "The means for each of the descriptions define the AOVs. The AOVs for each of the categories are:\n",
+    "For each of the descriptions, the **means** define the AOVs. The AOVs for each of the categories are:\n",
     "- *Regular businesses*: \\$293.50\n",
     "- *Large businesses*: \\$704000.00"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26ea7a0c",
+   "cell_type": "markdown",
+   "id": "841cf05f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
