added to description

--- a/problem-1-sneakers-analysis.ipynb
+++ b/problem-1-sneakers-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba7af3d6",
+   "id": "94380d10",
    "metadata": {},
    "source": [
     "# Shopify Data Science Intern Challenge - Satrajit Chatterjee\n",
@@ -12,13 +12,15 @@
     "### Provided data: \n",
     "\n",
     "- Number of sneaker shops: **100**\n",
-    "- Initial average order value (AOV): **$3145.13**"
+    "- Initial average order value (AOV): **$3145.13**\n",
+    "\n",
+    "(Question 2 is answered as part of the `README.md`, along with concrete answers for Question 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cbb26d24",
+   "id": "8eacba45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7b8df2a",
+   "id": "c55fbc6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d973891",
+   "id": "d69288f5",
    "metadata": {},
    "source": [
     "## Step 1: Analyzing the Structure of the Provided Data\n",
@@ -49,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e3be595d",
+   "id": "2f83af8f",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f23eaa79",
+   "id": "1fe9d959",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e13bfaf1",
+   "id": "a70a9de3",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e9019a",
+   "id": "b95b73cd",
    "metadata": {},
    "source": [
     "The data description confirms the fact that AOV is 3145.13. We can also note that the 75% percentile is at 390 but the max order amount is 704000. This means that there are obvious outliers that are causing the overall mean to be inflated. Similarly, there are orders where the total number of items are at 2000, which is much higher than the 75% percentile of 3 items. Visualizing this data gives us a better sense of the outlying entries in the dataset. "
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8ed9794",
+   "id": "bcd8c2e8",
    "metadata": {},
    "source": [
     "## Step 2: Visualizing Outliers"
@@ -239,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "09efbc85",
+   "id": "64ef82b9",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "260f0f0e",
+   "id": "4c3f3d43",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a191d227",
+   "id": "372e62d8",
    "metadata": {},
    "source": [
     "The box plots for `order_amount` confirm that there are outliers, where the graph has a much smaller range with `showfliers` set to `False`. Calculating the highest and lowest 5% percentiles, we can filter down the data to a much more reasonable range, in this case, between 122 and 640. "
@@ -309,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7f416df8",
+   "id": "0acc0737",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b9f5f557",
+   "id": "929baac4",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ff8ddd9",
+   "id": "21a6dece",
    "metadata": {},
    "source": [
     "The box plots for `total_items` confirm that there are outliers, where the graph has a much smaller range with `showfliers` set to `False`. Calculating the highest and lowest 5% percentiles, we can filter down the data to a much more reasonable range, in this case, between 1 and 4. "
@@ -378,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04d408d",
+   "id": "9514d0a7",
    "metadata": {},
    "source": [
     "## Step 3: Tracking a New Dependent Variable - IOV\n",
@@ -389,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f442d074",
+   "id": "051075e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e4136b03",
+   "id": "4fbadf1a",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f9335426",
+   "id": "e7f03020",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d439221",
+   "id": "689cab64",
    "metadata": {},
    "source": [
     "The middle 90% quantile of IOV ranges bewteen 112 and 195. This contributes to the factors when creating a reliable data filter. "
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbf07bb0",
+   "id": "c01cee59",
    "metadata": {},
    "source": [
     "## Step 4: Data Filtering\n",
@@ -479,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "51aee0e3",
+   "id": "c61cad4c",
    "metadata": {
     "scrolled": true
    },
@@ -491,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cd20695d",
+   "id": "34262622",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9be7c46b",
+   "id": "9260e518",
    "metadata": {
     "scrolled": true
    },
@@ -526,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ea7f606e",
+   "id": "efd37582",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f307b4b",
+   "id": "0c03c722",
    "metadata": {},
    "source": [
     "The current filtering process can be used to categorize the data into two main sections, the first one representing 0.34% of the orders, for large businesses, and the second one representing 85.42% of the orders, for regular businesses. "
@@ -554,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f88d7ccf",
+   "id": "b892082a",
    "metadata": {},
    "source": [
     "## Step 5: Conclusive Data\n",
@@ -565,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9c58e8a8",
+   "id": "1d926f12",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e4864c0a",
+   "id": "5fe22978",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a90854f7",
+   "id": "aada05b8",
    "metadata": {},
    "outputs": [
     {
@@ -662,24 +664,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "927a2590",
+   "execution_count": 21,
+   "id": "83fed4d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x287a67ed040>,\n",
-       "  <matplotlib.lines.Line2D at 0x287a67ed310>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x287a67ed5e0>,\n",
-       "  <matplotlib.lines.Line2D at 0x287a67ed8b0>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x287a67ddd30>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x287a67edb80>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x287a67ede50>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x287a683fe20>,\n",
+       "  <matplotlib.lines.Line2D at 0x287a6850130>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x287a6850400>,\n",
+       "  <matplotlib.lines.Line2D at 0x287a68506d0>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x287a683fb50>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x287a68509a0>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x287a6850c70>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -702,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "550cf4fd",
+   "id": "520d1197",
    "metadata": {},
    "source": [
     "For each of the descriptions, the **means** define the AOVs. The AOVs for each of the categories are:\n",
@@ -712,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841cf05f",
+   "id": "0f252b61",
    "metadata": {},
    "source": [
     "---"
